Fixed overflow issue with container change from grid to flexbox wrap

--- a/src/Styles/Resume.css
+++ b/src/Styles/Resume.css
@@ -4,9 +4,17 @@
 
 .project-grid
 {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 2.5rem;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.2rem;
+    flex-direction: row;
+    /* justify-content: center; */
+}
+
+.project-grid > *
+{
+    flex-grow: 33%;
+    flex-basis: 33%;
 }
 
 .project-container
